Complete index.html welcome

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 				<h1>Tablatures of Guitar</h1>
 				<br>
 				<p>This website was created, 'cause the trainned one student which pretend become a professional, both in guitar or the developer website. Beyond of learn your favorite language the English. Pronounce, write, apostrophes, irregular plurals and other things.</p>
+				<p>All code this site stay in <a href="https://github.com/cladelcos/tablatureproject">github</a> all developers are welcome for help in develop this website or take anything which think important.</p>
+				<p>Thank you!</p>
+				<p>Claucos Delmonte</p>
+				<p>Brazil - São Paulo - SP</p>
 			</div>
 		</div>
 	</div>
